git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@372 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -710,11 +710,15 @@ fr-FR:
       index:
         title: 'Deposez vos idées'
       ideas:
-        title: 'Liste des idées'
+        title: 'Boîte à idées'
       ideas_create: 
         title: 'Déposer une nouvelle idée'
       ideas_update: 
         title: 'Modifier une idée'
+      rubrics_create: 
+        title: 'Créer une nouvelle rubrique'
+      versions_create:
+        title: 'Créer une nouvelle version'
 
     # Layout
     layouts:
