git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@373 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -551,12 +551,12 @@ fr-FR:
       journals_close:
         title: Clôture du journal
   
-      print_by_journal:
+      _print_by_journal:
         dates: Saisissez les dates ainsi que le journal
         journal: Journal
         from: Période du
         to: Au
-      print_date_to_date:
+      _print_date_to_date:
         dates: Saisissez les dates de début et de fin de la période
         from: Période du
         to: Au
