git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@375 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -274,6 +274,7 @@ fr-FR:
         amount: Montant HT
         amount_with_taxes: Montant TTC
         list_id: Liste de prix
+        tax_id: TVA
         product_id: Produit
         use_range: Définir un intervalle de quantité pour le produit
         quantity_min: 'Quantité minimale'
