git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@431 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -878,6 +878,8 @@ fr-FR:
         title: Nouvel achat
       purchase_order_lines_create:
         title: Ajouter un produit à la commande
+      purchase_order_lines_update:
+        title: Modifier un produit de la commande
       sales:
         title: Liste des ventes
       sales_new:
