git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@443 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR/help/guide-index.txt
+++ b/config/locales/fr-FR/help/guide-index.txt
@@ -1,5 +1,5 @@
 h1. Bienvenue dans l'aide d'Ekylibre
 
-Pour l'instant l'aide n'a pas été renseignée.
+Pour l'instant l'aide n'a pas été renseignée. Vous pouvez cliquer sur <<accountancy-index|{{buttons/update.png|Label}}>>. {{buttons/update.png|Label}}.
 
 
