git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@446 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -977,6 +977,7 @@ fr-FR:
       complement_choices:
         title: ' Options pour la liste déroulante : {{value}}'
         complement_choices_create: 'Créer une nouvelle option'
+        complements_update: 'Modifier le champ personnalisé'
       complement_choices_create: 
         title: ' Création d''une option pour la liste déroulante : {{value}}'
       complement_choices_update:
@@ -991,6 +992,7 @@ fr-FR:
         string_case: 'Options pour le texte'
       complements_update:
         title: 'Modification du champ personnalisé : {{value}}'
+  
 
       entities_create: 
         title: 'Création d''une nouvelle fiche client/fournisseur'
