--- a/config/locales/fr-FR/help/management-products.txt
+++ b/config/locales/fr-FR/help/management-products.txt
@@ -6,8 +6,11 @@ La barre de recherche d'un produit vous permet de trouver des produits que vous 
 Vous pouvez saisir dans le champ de recherche tout ou seulement une partie d'un mot.
 
 h2. L'affichage des produits : 
-* Une fois votre recherche effectuée, vous avez accès à un tableau vous récapitulant toutes les informations concernant le ou les produits trouvés.
-* Depuis ce tableau, vous pouvez également afficher, modifier ou supprimer un produit.
-* Dans le tableau, le nom du prix est un lien vous redirigeant vers l'affichage de votre produit récapitulant toutes les informations correspondantes au produit et d'ou vous pouvez également ajouter ou supprimer un prix pour ce produit.
+Une fois votre recherche effectuée, vous avez accès à un tableau vous récapitulant toutes les informations concernant le ou les produits trouvés. Depuis ce tableau, vous pouvez également:
+* afficher un produit :  <<management-products_display|{{buttons/show.png|afficher}}>>
+* le modifier : <<management-products_update|{{buttons/update.png|modifier}}>> 
+* le supprimer : {{buttons/delete.png|supprimer}}
+
+Dans le tableau, le nom du prix est un lien vous redirigeant vers l'affichage de votre produit récapitulant toutes les informations correspondantes au produit et d'ou vous pouvez également ajouter ou supprimer un prix pour ce produit.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
