--- a/config/locales/fr-FR/help/management-sale_order_natures.txt
+++ b/config/locales/fr-FR/help/management-sale_order_natures.txt
@@ -1,8 +1,12 @@
 h1. Les types de vente :
 
-* Les types de vente permettent de *définir des caractéristiques à une vente*, telles que: le délai d'expiration, le délai de paiement, les accomptes...
+Les types de vente permettent de *définir des caractéristiques à une vente*, telles que: le délai d'expiration, le délai de paiement, les accomptes...
 
-* Vous pouvez créer, modifier ou supprimer des types de vente.
+
+Vous pouvez
+* *créer* un type de vente
+* le *modifier* :  <<management-sale_order_natures_update|{{buttons/update.png|modifier}}>>  
+* le *supprimer* : {{buttons/delete.png|supprimer}}
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
  
