--- a/config/locales/fr-FR/help/management-shelves.txt
+++ b/config/locales/fr-FR/help/management-shelves.txt
@@ -1,8 +1,15 @@
 h1. Comment gérer les catégories de produit ?
 
-* Vous pouvez créer, modifier ou supprimer *des catégories* qui seront *rattachées à tous vos différents produits*.
+Vous pouvez :
+* *créer*
+* *modifier* : <<management-shelves_update|{{buttons/update.png|modifier}}>>
+* *supprimer* : {{buttons/delete.png|supprimer}}
 
-* Les catégories peuvent être hierarchisées, c'est à dire que vous pouvez créer des sous-catégories et des sur-catégories.
+des *catégories de produits* qui seront rattachées à tous vos différents produits.
+
+
+
+Les catégories peuvent être hierarchisées, c'est à dire que vous pouvez créer des sous-catégories et des sur-catégories.
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
