--- a/config/locales/fr-FR/help/relations-complement_choices.txt
+++ b/config/locales/fr-FR/help/relations-complement_choices.txt
@@ -5,6 +5,11 @@ Les options de la liste déroulante correspondent aux différents choix que cell
 * 51 à 100 kms
 * ... 
 
+Vous pouvez également :
+* créer une nouvelle option pour votre liste déroulante
+* la modifier : <<relations-complement_choices|{{buttons/update.png|modifier}}>> 
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
+
+
 <<relations-complement_choices_create|Création d'une option>>
