--- a/config/locales/fr-FR/help/relations-complements_update.txt
+++ b/config/locales/fr-FR/help/relations-complements_update.txt
@@ -1,4 +1,4 @@
 h1. Comment modifier un champ personnalisé ?
-Il vous suffit de modifier les champs que vous désirez, à l'exception du champ type de donnée qu'il n'est pas possible de modifier pour des raisons d'intégrité de l'information.
+Il vous suffit de modifier les champs que vous désirez, à l'exception du champ type de donnée qu'il n'est pas possible de modifier pour ne pas nuire aux données précèdemment enregistrées.
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
