--- a/config/locales/fr-FR/help/relations-entities.txt
+++ b/config/locales/fr-FR/help/relations-entities.txt
@@ -1,7 +1,7 @@
 h1. Comment gérer ces fiches de relations ?
 
 h2. La recherche d'une fiche
-La barre de recherche d'une fiche vous permet de trouver des fiches client ou fournisseur. Cette recherche s'effectue sur tous les champs, c'est à dire sur toutes les informations concernant la fiche. 
+La barre de recherche d'une fiche vous permet de trouver des fiches client ou fournisseur. Cette recherche s'effectue sur *tous les champs*, c'est à dire sur toutes les informations concernant la fiche. 
 
 Vous pouvez saisir dans le champ de recherche tout ou seulement une partie d'un mot.
 
@@ -9,5 +9,11 @@ h2. L'affichage des fiches
 Une fois votre recherche effectuée, vous avez accès à un tableau vous récapitulant toutes les informations concernant la ou les fiches trouvées.
 
 La liste des colonnes du tableau n'est actuellement pas paramétrable.
+
+Vous pouvez :
+* créer une nouvelle fiche 
+* l'afficher :  <<relations-entities_display|{{buttons/show.png|afficher}}>>
+* la modifier : <<relations-entities_update|{{buttons/update.png|modifier}}>> 
+* la supprimer : {{buttons/delete.png|supprimer}}
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
