--- a/config/locales/fr-FR/help/relations-index.txt
+++ b/config/locales/fr-FR/help/relations-index.txt
@@ -1,8 +1,8 @@
 h1. Gestion des relations clients fournisseurs
 
-<<<<<<< .mine
 h2. Comment gérer les fiches clients et fournisseurs ?
-* Ce module vous permet de créer, modifier, supprimer des fiches pour chacun de vos clients et fournisseurs. 
+* Les fiches clients/fournisseurs vous permettent de collecter et sauvegarder toutes les informations que vous désirez concernant vos clients et fournisseurs.
+* Ce module vous permet de créer, modifier, supprimer des fiches pour chacun de vos clients et fournisseurs. Ces fiches sont paramétrables grâce à un système de champs personnalisés vous donnant la possibilité de pouvoir saisir tous types d'informations complémentaires.
 * Vous avez également un système de recherche de fiches.
 
 h2. Les types de fiche :
@@ -11,6 +11,3 @@ Vous pouvez également créer des types de fiche vous permettant d'attribuer un 
 h2. Les champs personnalisés :
 * Les fiches clients/fournisseurs sont paramétrables grâce à un système de champs personnalisés vous donnant la possibilité de pouvoir saisir des informations complémentaires à celles initialement présentées par les formulaires de création/modification d'une fiche.
 *  Il est possible de paramétrer tous leurs attributs et de les rendre ou non visibles et obligatoires.
-=======
-Ce module vous permet de créer des fiches pour chacun de vos clients et fournisseurs. Ces fiches sont paramétrables grâce à un système de champs personnalisés vous donnant la possibilité de pouvoir saisir tous types d'informations complémentaires.
->>>>>>> .r439
