--- a/config/locales/fr-FR/help/relations-entities_create.txt
+++ b/config/locales/fr-FR/help/relations-entities_create.txt
@@ -1,6 +1,6 @@
 h1. Comment créer une nouvelle fiche ?
 
-Pour créer une nouvelle fiche, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
+Pour créer une nouvelle fiche, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés en bleu) et d'autres sont facultatifs (encadrés en gris). La création ne s'effectue uniquement que si tous les champs obligatoires ont été correctement renseignés.
 
 À ces renseignements de base peuvent s'ajouter des champs personnalisés que vous pourrez créer en allant sur la page *Champs personnalisés*.
  
