git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@455 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR/help/accountancy-accounts_update.txt
+++ b/config/locales/fr-FR/help/accountancy-accounts_update.txt
@@ -1,2 +1,3 @@
 h1. Comment modifier un compte comptable
-Après avoir cliqué sur **l'iĉone du crayon**, valider le formulaire de modification du compte en renseignant bien tous les champs.
+
+Vous ne pouvez modifier que l'intitulé du compte.
