--- a/config/locales/fr-FR/help/accountancy-document_prepare.txt
+++ b/config/locales/fr-FR/help/accountancy-document_prepare.txt
@@ -4,4 +4,4 @@ h2. Qu'est ce qu'un document comptable ?
 Un document comptable est un document qui synthétise des informations permettant de rendre compte de l'activité économique et financière de l'entreprise. Il existe différents types de documents comptables (balances, journaux généraux et auxiliaires, grand livre, bilan et compte de résultat ...).
 
 h2.  Comment imprimer un document comptable ?
-Une liste de documents comptables vous est proposée. Choisisser l'un deux en sélectionnant le bouton radio qui le précède et valider votre <<accountancy-document_print|choix>> en cliquant sur le bouton **Suivant**. 
+Une liste de documents comptables vous est proposée. Choisissez l'un d'eux et cliquez le bouton **Suivant**. 
