--- a/config/locales/fr-FR/help/accountancy-financialyears_close.txt
+++ b/config/locales/fr-FR/help/accountancy-financialyears_close.txt
@@ -1,3 +1,4 @@
-h1. Comment clôturer un exercice comptable
-Pour clôturer un exercice comptable, passer par le menu **Clôture d'exercice** situé dans la colonne **Travaux comptables** à gauche. Un formulaire apparaît dans lequel vous pouvez sélectionner le code de l'exercice à clôturer ainsi que la date de clôture. Après validation, une encoche **Clôturé** à la ligne correspondante du <<accountancy-financialyears|tableau des exercices>> signalera le bon déroulement de l'opération de fermeture. 
+h1. Comment clôturer un exercice comptable ?
 
+
+Il vous suffit de sélectionner le numéro de l'exercice comptable à clôturer ainsi que la date de clôture qui, par défaut, est à la date du jour.
