--- a/config/locales/fr-FR/help/accountancy-accounts_update.txt
+++ b/config/locales/fr-FR/help/accountancy-accounts_update.txt
@@ -1,3 +1,3 @@
 h1. Comment modifier un compte comptable
+Remplisser le formulaire de modification de compte en renseignant bien le champ correspondant.
 
-Vous ne pouvez modifier que l'intitulé du compte.
