--- a/config/locales/fr-FR/help/accountancy-statements_update.txt
+++ b/config/locales/fr-FR/help/accountancy-statements_update.txt
@@ -1,5 +1,5 @@
 h1. Comment modifier un relevé de compte
-Après avoir cliqué sur **l'icône du crayon**, remplissez le formulaire de modification du relevé de compte en renseignant bien tous les champs.  En outre, vous avez la possibilité de créer un <<accountancy-bank_accounts_create|nouveau compte bancaire>>, au moyen du lien **Nouveau...** situés en face de la zone de sélection. Une fois validé, une liste des écritures propres au compte bancaire référencé apparaît dans laquelle vous pouvez <<accountancy-statements_point|pointer/dépointer>> les écritures à ajouter/enlever du relevé de compte. 
+Remplisser le formulaire de modification du relevé de compte en renseignant bien tous les champs. Les liens **Nouveau...** situés en face de la zone de sélection, permettent de créer un <<accountancy-bank_accounts_create|nouveau compte bancaire>>à référencer. 
  
 
 
