--- a/config/locales/fr-FR/help/management-products_create.txt
+++ b/config/locales/fr-FR/help/management-products_create.txt
@@ -1,6 +1,6 @@
 h1. Comment ajouter un nouveau produit?
 
-* Pour créer un nouveau produit, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
+* Pour créer un nouveau produit, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement que si tous les champs obligatoires ont été correctement renseignés.
 
 * Le nom du produit doit être différent pour chaque produit.
 
