--- a/config/locales/fr-FR/help/management-products_update.txt
+++ b/config/locales/fr-FR/help/management-products_update.txt
@@ -1,5 +1,4 @@
 h1. Comment modifier un produit?
 
-Il vous suffit de modifier les champs que vous désirez, vous pouvez le faire pour des champs déjà renseignés ou pour des champs qui ne le sont pas encore.
-La modification ne peut s’effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
+Il vous suffit de modifier les champs que vous désirez, vous pouvez le faire pour des champs déjà renseignés ou pour des champs qui ne le sont pas encore. La modification ne peut s’effectuer uniquement que si tous les champs obligatoires ont été correctement renseignés.
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
