git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@480 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -831,6 +831,10 @@ fr-FR:
         units: 'Unités de mesure'
    
       prices: 
+         all: Tous les prix
+         sales: Les prix de vente
+         purchases: 'Les prix d''achat du fournisseur'
+         title: Liste des prix
          prices_create: 'Créer un nouveau prix d''achat' 
          prices_create: Créer un nouveau prix de vente 
       prices_create:
