git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@498 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -1002,6 +1002,9 @@ fr-FR:
 
     # Relations
     relations:
+      _coordinates_form:
+        canals: 'Coordonnées'
+        address: 'Adresse'
       complements:
         title: 'Champs complémentaires personnalisés'
         complements_create: Créer un nouveau champ personnalisé
@@ -1075,6 +1078,8 @@ fr-FR:
         entities: Gérer les fiches clients et fournisseurs
         parameters: Paramètres
         complements: Champs personnalisés
+      _general_description_form:
+        title: 'Description générale'
 
   # Used in the models
   # Used in the models
