git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@503 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -342,6 +342,7 @@ fr-FR:
         to_purchase: 'Produit destiné à l''achat'
         to_rent: Produit destiné à la location
         unit_id: Unité de mesure
+        weight: Poids
         without_stocks: Ne nécessite pas de gestion de stocks
       purchase_order:
         client_id: Fournisseur
