--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -314,9 +314,10 @@ fr-FR:
         tax_id: TVA
         product_id: Produit
         product: Produit
-        use_range: Définir un intervalle de quantité pour le produit
         quantity_min: 'Quantité minimale'
         quantity_max: 'Quantité maximale'
+        range: Intervalle
+        use_range: Définir un intervalle de quantité pour le produit
       price_list:
         active: Active (utilisable)
         comment: Commentaire
@@ -896,9 +897,10 @@ fr-FR:
         title: 'Ajouter un nouveau produit'
       products_display:
         prices: 'Prix du produit'
-        prices_create: 'Ajouter un prix'
         products: 'Voir la liste de produits'
         products_update: 'Modifier la fiche du produit'
+        purchases_prices_create: "Ajouter un prix d'achat"
+        sales_prices_create: 'Ajouter un prix de vente'
         title: 'Fiche du produit : {{value}}'
       _products_form:
         accountancy: Comptabilité
