git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@521 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -358,8 +358,12 @@ fr-FR:
         number: Numéro
         comment: Commentaire
       purchase_order_line: 
+        amount: Montant HT
+        amount_with_taxes: Montant TTC
         price_id: Produit
+        product_id: Produit
         quantity: Quantité
+        unit_id: Unités
       rubric:
         name: Titre
         nature: Where - What
@@ -922,6 +926,7 @@ fr-FR:
         amount: Montant HT
         amount_with_taxes: Montant TTC
         purchase_order_lines_create: Ajouter un produit à la commande
+        purchases: Consulter la liste des achats
         order_print: Imprimer la commande
       purchases:
         title: Liste des achats
