git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@525 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -841,7 +841,10 @@ fr-FR:
       _deliveries_update:
         title: 'Modification de la livraison' 
       _deliveries_form:
+        amount: Total de la livraison HT
+        amount_with_taxes: Total de la livraison TTC
         infos: 'Renseignez les caractéristiques de la livraison'
+        
 
       index:
         delays: Délais
